--- a/package.json
+++ b/package.json
@@ -5,15 +5,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.6",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
+    "@prisma/client": "^4.10.1",
+    "bcrypt": "^5.1.0",
+    "bootstrap-icons": "^1.10.3",
+    "daisyui": "^2.50.2",
+    "lodash": "^4.17.21",
     "next": "13.1.6",
+    "next-auth": "^4.19.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "tailwindcss": "^3.2.7",
+    "ulid": "^2.3.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "prisma": "^4.10.1"
   }
 }
