--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.6",
     "@prisma/client": "^4.10.1",
+    "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
     "bootstrap-icons": "^1.10.3",
     "daisyui": "^2.50.2",
